fixed return type as list - updated openApi file
